# Badminton

./: .gitignore  CMakeLists.txt  HOWTO  README.md  app
data/csvs/: csv1.csv  csv2.csv  csv3.csv
src/bg/: bg.cpp  show-bg.cpp
src/court/: court.cpp  show-court.cpp
src/crop/: show-crop-vid.cpp
src/input/: input.cpp
src/player/: player.cpp  show-player-vid.cpp
src/pose/: show-pose-vid.cpp
src/result/: result.cpp
src/tag/: show-tagged-vid.cpp  tag-eval.cpp  tag-gt.cpp  tag.cpp
src/test-player/: player-tag-truth.cpp  test-player-vid.cpp
src/test-tag/: test-tag-eval.cpp  test-tag-truth.cpp  test-tag-vid.cpp
src/util/: explore.cpp
